--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/html2canvas.esm.js",
   "typings": "dist/types/index.d.ts",
   "browser": "dist/html2canvas.js",
-  "version": "v1.0",
+  "version": "1.0.0",
   "author": "zongbao.cui",
   "engines": {
     "node": ">=8.0.0"
